# AMOSA

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  _vimrc_local.vim  amosa.code-workspace
example/: example.cpp  example2.cpp  example3.cpp  example_v2.cpp  problem.cpp  problem.hpp  problem2.cpp  problem2.hpp  problem3.cpp  problem3.hpp
src/: amosa.hpp
